<resources>
    <string name="app_name">Playlist Maker</string>

    <!--    MainActivity-->
    <string name="media_library">Медиатека</string>

    <!--    SettingActivity-->
    <string name="settings">Настройки</string>
    <string name="black_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="message_to_email">Спасибо разработчикам и разработчицам
        за крутое приложение!</string>
    <string name="email_developers">egoroof1@yandex.ru</string>
    <string name="subject_to_email">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="practicum_ru">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="practicum_offer_ru">https://yandex.ru/legal/practicum_offer/ru/</string>

    <!--  Search Activity  -->
    <string name="search">Поиск</string>
    <string name="clear">clear</string>

    <!--    contentDescription-->
    <string name="back">back</string>
    <string name="share">Поделиться</string>
    <string name="support">support</string>
    <string name="arrow_forward">arrow_forward</string>
    <string name="track_cover">track cover</string>
    <string name="space">/ /</string>
    <string name="problems_signal">Проблемы со связью\n\nЗагрузка не удалась. проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="add_to_media_library">add to media library</string>
    <string name="play_start">play/start</string>
    <string name="like">like</string>
    <string name="_00_00">00:00</string>
    <string name="replication_error">Ошибка воспроизведения</string>
    <string name="media">Медиатека</string>

    <string name="tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="your_library_is_empty">Ваша библиотека пуста</string>
    <string name="playlist_list_is_empty">Новый плейлист</string>
    <string name="play_list_empty">Вы не создали\nни одного плейлиста</string>
    <string name="mew_playlist">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="name_media_player">Название*</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="eroor_load_track">Ошибка загрузки трека</string>
    <string name="track_is_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_is_create">Плейлист %1$s создан</string>
    <string name="playlist_is_deleted">Плейлист %1$s удалён</string>
    <string name="track_is_deleted">Трек %1$s удалён</string>
    <string name="minuts">%1$d минут</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="count_tracks">%1$d трек</string>
    <string name="tracks_list_is_empty_share_error">В этом плейлисте нет списка треков, которым можно поделиться</string>


    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="finish_creating_the_playlist">Завершить создание плейлиста?</string>
    <string name="finish_update_the_playlist">Завершить редактирование плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancellation">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="dyw_delete_track">Хотите удалить трек?</string>
    <string name="dyw_delete_playlist"><![CDATA[Хотите удалить плейлист <<%1$s>>?]]></string>

    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

</resources>