<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_main"
    android:paddingBottom="@dimen/dp_24"
    tools:context=".MainActivity">


    <TextView style="@style/title"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:text="@string/app_name"
        android:textColor="@color/white"/>

    <Button
        style="@style/btn_main"
        android:id="@+id/btn_search"
        android:text="@string/search"
        app:cornerRadius="@dimen/dp_16"
        app:icon="@drawable/ic_search_24" />

    <Button
        style="@style/btn_main"
        android:id="@+id/btn_media_library"
        android:text="@string/media_library"
        app:cornerRadius="@dimen/dp_16"
        app:icon="@drawable/ic_media_library_24" />

    <Button
        style="@style/btn_main"
        android:id="@+id/btn_settings"
        android:text="@string/settings"
        app:cornerRadius="@dimen/dp_16"
        app:icon="@drawable/ic_settings_24" />

</LinearLayout>