<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_activity"
    tools:context=".settings.ui.fragment.SettingsFragment">


    <com.google.android.material.appbar.MaterialToolbar
        style="@style/toolbar"
        android:id="@+id/toolbar"
        app:title="@string/settings"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_isBlackTheme"
        style="@style/text_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_gravity="center_vertical"
        android:paddingHorizontal="@dimen/dp_16"
        android:text="@string/black_theme"
        app:thumbTint="@color/switch_thumb"
        app:trackTint="@color/switch_track"/>


    <TextView
        style="@style/text_settings"
        android:id="@+id/btn_search"
        android:paddingHorizontal="@dimen/dp_16"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share_24"
        app:drawableTint="@color/color_icon_setting"/>

    <TextView
        style="@style/text_settings"
        android:id="@+id/btn_support"
        android:paddingHorizontal="@dimen/dp_16"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/ic_support_24"
        app:drawableTint="@color/color_icon_setting"/>

    <TextView
        style="@style/text_settings"
        android:id="@+id/btn_agreement"
        android:paddingHorizontal="@dimen/dp_16"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24"
        app:drawableTint="@color/color_icon_setting" />


</LinearLayout>