<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        style="@style/title"
        android:id="@+id/toolbar"
        android:text="@string/settings"
        app:drawableStartCompat="@drawable/ic_back_arrow_24"
        app:drawableTint="@color/string" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:orientation="horizontal">

        <TextView
            style="@style/text_settings"
            android:layout_weight="1"
            android:text="@string/black_theme"/>

        <Switch
            android:id="@+id/sw_isBlackTheme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp_16"
            android:thumbTint="@color/switch_thumb"
            android:trackTint="@color/switch_track"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>


    <TextView
        style="@style/text_settings"
        android:id="@+id/btn_search"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share_24"
        app:drawableTint="@color/color_icon_setting"/>

    <TextView
        style="@style/text_settings"
        android:id="@+id/btn_support"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/ic_support_24"
        app:drawableTint="@color/color_icon_setting"/>

    <TextView
        style="@style/text_settings"
        android:id="@+id/btn_agreement"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24"
        app:drawableTint="@color/color_icon_setting" />


</LinearLayout>