<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/image"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="13dp"
        android:contentDescription="@string/arrow_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/text_settings"
        android:id="@+id/name_track"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_arrow_forward"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        style="@style/text_settings"
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:textSize="11sp"
        android:textColor="@color/color_icon_setting"
        app:layout_constraintStart_toStartOf="@+id/name_track"
        app:layout_constraintTop_toBottomOf="@+id/name_track"
        tools:text="The Beatles" />

    <ImageView
        android:id="@+id/ic_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/artist_name"
        app:layout_constraintTop_toBottomOf="@+id/name_track"
        android:contentDescription="@string/space"
        app:srcCompat="@drawable/ic_dot" />

    <TextView
        android:id="@+id/time_track"
        style="@style/text_settings"
        android:layout_width="0dp"
        android:layout_height="13dp"
        android:layout_marginEnd="119dp"
        android:textColor="@color/color_icon_setting"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/name_track"
        app:layout_constraintStart_toEndOf="@+id/ic_dot"
        app:layout_constraintTop_toBottomOf="@+id/name_track"
        tools:text="2:55" />

    <ImageView
        android:id="@+id/btn_arrow_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_arrow_forward_24"
        android:scaleType="centerCrop"
        android:contentDescription="@string/track_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>