<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E8EB"
    tools:context=".media.ui.fragments.PlayListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_caver_playlist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/description"
            android:scaleType="centerCrop"
            android:padding="40dp"
            android:background="@color/white"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholder" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/clear"
            android:src="@drawable/ic_back_arrow_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"
            android:textFontWeight="700"
            android:fontFamily="@font/ys_display_bold"
            android:textColor="@color/color_edittext_text"
            tools:text="Playlist name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_caver_playlist" />

        <TextView
            android:id="@+id/tv_year_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/color_edittext_text"
            android:textFontWeight="400"
            android:textSize="18sp"
            tools:text="2022"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_playlist" />

        <TextView
            android:id="@+id/tv_total_time_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/color_edittext_text"
            android:textFontWeight="400"
            android:textSize="18sp"
            tools:text="300 минут"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_year_playlist" />

        <ImageView
            android:id="@+id/ic_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/space"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total_time_playlist"
            app:layout_constraintStart_toEndOf="@+id/tv_total_time_playlist"
            app:layout_constraintTop_toTopOf="@+id/tv_total_time_playlist"
            app:srcCompat="@drawable/ic_dot"
            app:tint="@color/color_edittext_text" />

        <TextView
            android:id="@+id/tv_quantity_tracks_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/color_edittext_text"
            android:textFontWeight="400"
            android:textSize="18sp"
            tools:text="98 треков"
            app:layout_constraintStart_toEndOf="@+id/ic_dot"
            app:layout_constraintTop_toBottomOf="@+id/tv_year_playlist" />

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_settings_dots"
            app:layout_constraintStart_toEndOf="@+id/iv_sharing"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_time_playlist"
            app:tint="@color/color_edittext_text" />

        <ImageView
            android:id="@+id/iv_sharing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_share_24"
            app:layout_constraintStart_toStartOf="@+id/tv_total_time_playlist"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_time_playlist"
            app:tint="@color/color_edittext_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_view_overlay"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/playlist_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="200dp"
        android:visibility="visible"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/form" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <include
            android:id="@+id/include_layout_playlist"
            layout="@layout/item_playlist_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            />

        <TextView
            style="@style/text_settings"
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/share"/>
        <TextView
            style="@style/text_settings"
            android:id="@+id/btn_edit_info"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/edit_info"/>
        <TextView
            style="@style/text_settings"
            android:id="@+id/btn_delete_playlist"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/delete_playlist"/>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>